regressions/marans/SemanticErrors/classDeclMult.ic
//output: Failed.

class A{
}

class A{
}